--- a/style.less
+++ b/style.less
@@ -1,3 +1,4 @@
+// Local variables
 @Lato-B: "Lato-Bold";
 @Lato-R: "Lato-Regular";
 @white_color: #fff;
@@ -10,6 +11,8 @@
 @grey_light_color: rgba(58, 58, 58, 0.42);
 @border-button:3px solid @white_color;
 @box-sizing: border-box;
+
+//All styles
 .backface {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
